--- a/Web App/Web App.csproj
+++ b/Web App/Web App.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Web_App</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
