--- a/Web App/appsettings.json
+++ b/Web App/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Data Source=mssql.chester.network;Initial Catalog=db_2214148_co5227;User ID=user_db_2214148_co5227;Password=<P@ssword>"
+  }
 }
