Data Model and Scaffolded Pages

--- a/Web App/appsettings.json
+++ b/Web App/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Data Source=mssql.chester.network;Initial Catalog=db_2214148_co5227;User ID=user_db_2214148_co5227;Password=<P@ssword>"
+    "Web_AppContext": "Data Source=mssql.chester.network;Initial Catalog=db_2214148_co5227;User ID=user_db_2214148_co5227;Password=<P@ssword>"
   }
 }
